--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-sass": "^4.0.1"
   },
   "scripts": {
